--- a/src/app/components/modal-trailer/modal-trailer.component.html
+++ b/src/app/components/modal-trailer/modal-trailer.component.html
@@ -4,7 +4,7 @@
             <i class="pi pi-lock" style="font-size: 5rem"></i>
         </p-blockUI>
         <iframe width="854" height="480" scrolling="no"
-            [src]="config.data.youtube"
+            [src]="youtube"
             [title]="config.data.title" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
